# codegate

./: .gitignore  Dockerfile  README.md  codegate-profiling  config.yaml.example  docker-compose.yml  pyproject.toml  signatures.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 0-story.yml  1-bug.yml  2-task.yml  3-chore.yml
.github/workflows/: ci.yml  create-doc-issue.yml  feature-launcher.yml  image-build.yml  image-publish.yml  import_packages.yml  integration-tests.yml  openapi.yml  security.yml  update-model-costs.yml
api/: openapi.json
docs/: cli.md  configuration.md  development.md  logging.md  workspaces.md
installer/: go.mod  install.go
migrations/versions/: 2025_01_21_0820-4dec3e456c9e_add_on_delete_cascade.py  2025_01_24_0758-0f9b8edc8e46_add_llm_and_mux.py  2025_02_19_1452-5e5cd2288147_update_matcher_types.py  2025_03_04_0934-3ec2b4ab569c_migrate_to_glob_pattern.py  2025_03_06_1130-769f09b6d992_add_provider_endpoint_fields_to_muxes.py  2025_03_06_1130-769f09b6d992_add_provider_endpoint_type_to_muxes.py  2025_03_06_1324-4b81c45b5da6_add_provider_endpoint_name_to_muxes.py  2025_03_07_0902-1ee1be2156f7_.py  2025_05_01_1917-736fb0c10480_update_empty_provider_endpoint_names_.py  5c2f3eee5f90_introduce_workspaces.py
prompts/: default.yaml
scripts/: import_packages.py
src/codegate/: __init__.py  cli.py  codegate_logging.py  config.py  server.py
src/codegate/api/: v1.py  v1_models.py  (+1 more)
tests/: test_config.py  test_logging.py  test_server.py  test_storage.py  test_suspicious_commands.py
tests/anthropic/: streaming_messages_simple.txt  test_anthropic.py  tools_request.json
tests/api/: test_v1_api.py  test_v1_processing.py  test_v1_providers.py  test_v1_workspaces.py
tests/clients/: test_detector.py
tests/extract_snippets/: test_body_extractor.py
tests/integration/: checks.py  integration_tests.py  testcases.yaml
tests/muxing/: test_adapter.py  test_ollama_mappers.py  test_persona.py  test_rulematcher.py
tests/pipeline/: test_messages_block.py  test_output.py
tests/providers/: test_fim_analyzer.py  test_registry.py
tests/types/: test_generators.py
(+141 files in other folders)
