[tool.poetry]
name = "codegate"
version = "0.1.7"
description = "Generative AI CodeGen security gateway"
readme = "README.md"
authors = []
packages = [
    { include = "codegate", from = "src" },
]
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
click = "==8.2.0"
PyYAML = "==6.0.2"
fastapi = "==0.115.12"
uvicorn = "==0.34.2"
structlog = "==25.3.0"
llama_cpp_python = "==0.3.5"
cryptography = "==44.0.2"
sqlalchemy = "==2.0.40"
aiosqlite = "==0.21.0"
ollama = "==0.4.8"
pydantic-settings = "==2.9.1"
numpy = "2.2.5"
tree-sitter = "==0.24.0"
tree-sitter-go = "==0.23.4"
tree-sitter-java = "==0.23.5"
tree-sitter-javascript = "==0.23.1"
tree-sitter-python = "==0.23.6"
tree-sitter-rust = "==0.23.2"
alembic = "==1.15.2"
pygments = "==2.19.1"
sqlite-vec-sl-tmp = "==0.0.4"
greenlet = "==3.2.1"
cachetools = "==5.5.2"
legacy-cgi = "==2.6.3"
presidio-analyzer = "==2.2.358"
presidio-anonymizer = "==2.2.358"
onnxruntime = "==1.21.1"
onnx = "==1.17.0"
spacy = "<3.9.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
regex = "==2024.11.6"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
pytest-cov = "==6.1.1"
black = "==25.1.0"
ruff = "==0.11.7"
bandit = "==1.8.3"
build = "==1.2.2.post1"
wheel = "==0.45.1"
pytest-asyncio = "==0.26.0"
llama_cpp_python = "==0.3.5"
scikit-learn = "==1.6.1"
python-dotenv = "==1.1.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codegate = "codegate.cli:main"
generate-openapi = "src.codegate.server:generate_openapi"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
exclude = [
    "src/codegate/db/queries.py", # Ignore auto-generated file from sqlc
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
addopts = "-v --cov=codegate --cov-report=term-missing"
testpaths = ["tests"]
